force-app/main/default/objects/Litmos__OverallCompletionResult__c/Litmos__OverallCompletionResult__c.object-meta.xml
<CustomObject>
    <description>Store the completion percentages of user program results and user learningpath results</description>
    <label>Overall Completion Result</label>
    <nameField>
        <label>Overall Completion Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Overall Completion Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>