force-app/main/default/objects/Litmos__OverallCompletionResult__c/fields/Litmos__isProcessed__c.field-meta.xml
<CustomField>
    <fullName>Litmos__isProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProcessed</label>
    <type>Checkbox</type>
</CustomField>