force-app/main/default/objects/Litmos__OverallCompletionResult__c/fields/Litmos__Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Last_Updated__c</fullName>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>