force-app/main/default/objects/Litmos__OverallCompletionResult__c/fields/Litmos__LitmosID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__LitmosID__c</fullName>
    <label>LitmosID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>