force-app/main/default/objects/Litmos__OverallCompletionResult__c/fields/Litmos__OverallUserCourseCompletionPercentage__c.field-meta.xml
<CustomField>
    <fullName>Litmos__OverallUserCourseCompletionPercentage__c</fullName>
    <label>OverallUserCourseCompletionPercentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>