force-app/main/default/objects/Litmos__OverallCompletionResult__c/fields/Litmos__OverallUserLearningPathCompletionPercent__c.field-meta.xml
<CustomField>
    <fullName>Litmos__OverallUserLearningPathCompletionPercent__c</fullName>
    <label>OverallUserLearningPathCompletionPercent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>