force-app/main/default/objects/Litmos__OverallCompletionResult__c/fields/Litmos__TotalLearningPathAssigned__c.field-meta.xml
<CustomField>
    <fullName>Litmos__TotalLearningPathAssigned__c</fullName>
    <label>TotalLearningPathAssigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>