force-app/main/default/objects/Litmos__OverallCompletionResult__c/fields/Litmos__TotalLearningPathsCompleted__c.field-meta.xml
<CustomField>
    <fullName>Litmos__TotalLearningPathsCompleted__c</fullName>
    <label>TotalLearningPathsCompleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>